API-GATEWAY/hr-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.pathmatcher: "/"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: insecure-transport
  name: hr-harbor-traefik-ingress
  namespace: hyperregistry
spec:
  rules:
  - host: core.hyperregistry.svc
    http:
      paths:
      - backend:
          serviceName: hr-harbor-portal
          servicePort: 80
        path: /
        pathType: Prefix
      - backend:
          serviceName: hr-harbor-core
          servicePort: 80
        path: /api
        pathType: Prefix
      - backend:
          serviceName: hr-harbor-core
          servicePort: 80
        path: /service
        pathType: Prefix
      - backend:
          serviceName: hr-harbor-core
          servicePort: 80
        path: /v2
        pathType: Prefix
      - backend:
          serviceName: hr-harbor-core
          servicePort: 80
        path: /chartrepo
        pathType: Prefix
      - backend:
          serviceName: hr-harbor-core
          servicePort: 80
        path: /c
        pathType: Prefix
  tls:
  - hosts:
    - core.hyperregistry.svc
    secretName: hr-harbor-ingress
